--- a/my-nginx/default.conf
+++ b/my-nginx/default.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     server_name localhost;
     index index.html index.htm;
-    root html;
+    root /usr/share/nginx/html;
 
     location / {
         proxy_set_header Host $http_host;
